[package]
name = "smt-strings"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = "0.8.0"
dot = {version = "0.1.4", optional = true}
indexmap = "2.8.0"
itertools = "0.14.0"
quickcheck = "1.0.3"
smallvec = "1.14.0"
rand = {version = "0.9.0", optional = true}


[dev-dependencies]
quickcheck_macros = "1"
rand = "0.9.0"


[features]
full = ["automata", "sampling", "automata"]
regex = []
automata = ["dep:dot", "regex"]
sampling = ["dep:rand"]
