[package]
name = "smt-str"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["smt", "strings", "regex", "automata"]
categories = ["science"]
homepage = "https://github.com/lotzk/smt-str"
repository = "https://github.com/lotzk/smt-str"
readme = "readme.md"
description = "Utilities for working with SMT-LIB strings in Rust"

[dependencies]
bit-set = {version = "0.8.0", optional = true}
dot = {version = "0.1.4", optional = true}
indexmap = {version = "2.8.0", optional = true}
itertools = {version = "0.14.0", optional = true}
smallvec = {version = "1.14.0", optional = true}
rand = {version = "0.9.0", optional = true}
quickcheck = "1.0.3"
num-traits = "0.2.19"


[dev-dependencies]
quickcheck_macros = "1"
rand = "0.9.0"

[features]
regex = ["dep:smallvec", "dep:itertools"]
automata = ["dep:dot", "dep:bit-set", "dep:indexmap", "regex"]
sampling = ["dep:rand"]
full = ["automata", "sampling", "automata"]
